--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
+    "@iconscout/react-unicons": "^2.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "emailjs": "^4.0.3",
+    "framer-motion": "^10.18.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.0"
   },
